--- a/control.html
+++ b/control.html
@@ -3,131 +3,180 @@
 <head>
   <meta charset="utf-8">
   <title>Control Room - Saturn's Digital Doorbell</title>
+  <link rel="icon" href="IMG_1066.png">
   <style>
+    * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
-      font-family: Arial, sans-serif;
-      background: #f5f5f5;
-      margin: 0;
-      padding: 0;
-      display: none; /* hidden until unlocked */
+      font-family: -apple-system, BlinkMacSystemFont, "SF Pro Display", sans-serif;
+      background: #000;
+      color: #fff;
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
+      min-height: 100vh;
+      padding: 40px;
     }
-    .container {
-      max-width: 900px;
-      margin: 40px auto;
-      background: white;
-      padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+    .glass-panel {
+      background: rgba(255, 255, 255, 0.05);
+      border: 1px solid rgba(255, 255, 255, 0.15);
+      border-radius: 20px;
+      padding: 30px;
+      backdrop-filter: blur(6px);
+      -webkit-backdrop-filter: blur(6px);
+      box-shadow: 0 0 20px rgba(255,255,255,0.1);
+      width: 800px;
+      max-width: 95%;
     }
-    h1, h2 { margin-top: 0; }
-    pre {
-      background: #eee;
-      padding: 10px;
-      border-radius: 6px;
-      max-height: 300px;
-      overflow-y: auto;
-      white-space: pre-wrap;
-      word-wrap: break-word;
-    }
-    .alias-list {
-      margin: 10px 0;
-      padding: 10px;
-      background: #f0f0f0;
-      border-radius: 6px;
-    }
+    h1 { margin-bottom: 20px; text-align: center; }
     button {
-      margin: 5px 0;
-      padding: 8px 14px;
+      margin: 6px;
+      padding: 10px 14px;
       border: none;
-      background: #007bff;
-      color: white;
-      border-radius: 4px;
+      border-radius: 8px;
+      background: rgba(0,122,255,0.7);
+      color: #fff;
+      font-size: 14px;
       cursor: pointer;
+      transition: all 0.2s;
     }
-    button:hover { background: #0056b3; }
+    button:hover { background: rgba(0,122,255,1); }
+    .log-entry {
+      margin-bottom: 12px;
+      padding: 10px;
+      border-radius: 10px;
+      border: 1px solid rgba(255,255,255,0.1);
+      background: rgba(255,255,255,0.05);
+    }
+    .log-entry h3 {
+      margin-bottom: 4px;
+      font-size: 16px;
+    }
+    .log-entry small {
+      display: block;
+      font-size: 12px;
+      opacity: 0.8;
+      margin-bottom: 6px;
+    }
+    .log-entry p {
+      font-size: 14px;
+      opacity: 0.9;
+    }
+    #status {
+      margin-bottom: 20px;
+      font-size: 13px;
+      opacity: 0.8;
+      text-align: center;
+    }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>Control Room</h1>
-
-    <h2>Aliases</h2>
-    <div id="aliasList" class="alias-list"></div>
-
-    <h2>Logs</h2>
-    <button onclick="clearLogs()">Clear Logs</button>
-    <h3>Raw JSON</h3>
-    <pre id="jsonPane">Loading...</pre>
+  <div class="glass-panel">
+    <h1>Control Room ⚙</h1>
+    <div id="status">Loading logs…</div>
+    <div style="text-align:center; margin-bottom:20px;">
+      <button onclick="refreshLogs()">🔄 Refresh Logs</button>
+      <button onclick="clearLogs()">🧹 Clear Logs</button>
+      <button onclick="sendTestPing()">📢 Send Test Ping</button>
+    </div>
+    <div id="logContainer"></div>
   </div>
 
-  <script>
-    // --- PIN LOCK ---
-    const pin = "2010";
-    const entered = prompt("Enter PIN to access Control Room:");
-    if (entered !== pin) {
-      document.body.innerHTML = "<h1 style='text-align:center;margin-top:20%;'>Access Denied</h1>";
-      throw new Error("Wrong PIN");
+<script>
+  const JSONBIN_ID = "68a31acaae596e708fcd3922";
+  const JSONBIN_KEY = "$2a$10$EFoDNu/JdnMgdB4fjvG3O.MyCIp.y0zU0PKSuIEnzG6.YfyiPdeUu";
+
+  async function refreshLogs() {
+    document.getElementById("status").innerText = "Refreshing logs…";
+    try {
+      const res = await fetch(`https://api.jsonbin.io/v3/b/${JSONBIN_ID}/latest`, {
+        headers: { "X-Master-Key": JSONBIN_KEY }
+      });
+      const data = await res.json();
+      renderLogs(data.record.logs || []);
+      document.getElementById("status").innerText = "Logs loaded.";
+    } catch (err) {
+      document.getElementById("status").innerText = "Failed to load logs.";
+      console.error(err);
     }
-    document.body.style.display = "block";
+  }
 
-    // --- Alias Map (sync with main page) ---
-    const crypticAliases = {
-      ganik: "Garlic",
-      aadity: "Witch of Venus",
-      chinmay: "Chimney"
-    };
-
-    // Display aliases
-    function renderAliases() {
-      const container = document.getElementById("aliasList");
-      container.innerHTML = Object.entries(crypticAliases)
-        .map(([k, v]) => `<b>${k}</b> → ${v}`)
-        .join("<br>");
+  function renderLogs(logs) {
+    const container = document.getElementById("logContainer");
+    container.innerHTML = "";
+    if (logs.length === 0) {
+      container.innerHTML = "<p style='opacity:0.7'>No logs available.</p>";
+      return;
     }
+    logs.forEach((log, idx) => {
+      const div = document.createElement("div");
+      div.className = "log-entry";
+      div.innerHTML = `
+        <h3>${log.name}</h3>
+        <small>${new Date(log.timestamp).toLocaleString()}</small>
+        <p>Reason: ${log.reason}</p>
+        <button onclick="deleteLog(${idx})">❌ Delete</button>
+      `;
+      container.appendChild(div);
+    });
+  }
 
-    // --- JSONBin IDs (auto-filled from main page) ---
-    const BIN_ID = "68a31acaae596e708fcd3922";
-
-    // Fetch and render logs (public bin → no key needed)
-    async function fetchLogs() {
-      try {
-        const res = await fetch(`https://api.jsonbin.io/v3/b/${BIN_ID}/latest`);
-        const data = await res.json();
-        document.getElementById("jsonPane").innerText =
-          JSON.stringify(data.record || data, null, 2);
-      } catch (err) {
-        document.getElementById("jsonPane").innerText = "Error fetching logs.";
-        console.error(err);
-      }
+  async function clearLogs() {
+    if (!confirm("Are you sure you want to clear all logs?")) return;
+    try {
+      await fetch(`https://api.jsonbin.io/v3/b/${JSONBIN_ID}`, {
+        method: "PUT",
+        headers: {
+          "Content-Type": "application/json",
+          "X-Master-Key": JSONBIN_KEY,
+          "X-Bin-Versioning": "false"
+        },
+        body: JSON.stringify({ logs: [] })
+      });
+      refreshLogs();
+    } catch (err) {
+      console.error("Failed to clear logs:", err);
     }
+  }
 
-    // Clear logs (needs key even if bin is public)
-    async function clearLogs() {
-      if (!confirm("Are you sure you want to clear all logs?")) return;
-      try {
-        const res = await fetch(`https://api.jsonbin.io/v3/b/${BIN_ID}`, {
-          method: "PUT",
-          headers: {
-            "Content-Type": "application/json",
-            "X-Master-Key": "YOUR_API_KEY" // still required for write ops
-          },
-          body: JSON.stringify([])
-        });
-        if (res.ok) {
-          alert("Logs cleared.");
-          fetchLogs();
-        } else {
-          alert("Failed to clear logs. (Key missing?)");
-        }
-      } catch (err) {
-        alert("Error clearing logs.");
-        console.error(err);
-      }
+  async function deleteLog(index) {
+    try {
+      const res = await fetch(`https://api.jsonbin.io/v3/b/${JSONBIN_ID}/latest`, {
+        headers: { "X-Master-Key": JSONBIN_KEY }
+      });
+      const data = await res.json();
+      let logs = data.record.logs || [];
+      logs.splice(index, 1);
+
+      await fetch(`https://api.jsonbin.io/v3/b/${JSONBIN_ID}`, {
+        method: "PUT",
+        headers: {
+          "Content-Type": "application/json",
+          "X-Master-Key": JSONBIN_KEY,
+          "X-Bin-Versioning": "false"
+        },
+        body: JSON.stringify({ logs })
+      });
+      refreshLogs();
+    } catch (err) {
+      console.error("Failed to delete log:", err);
     }
+  }
 
-    // Init
-    renderAliases();
-    fetchLogs();
-  </script>
+  async function sendTestPing() {
+    try {
+      await fetch("https://ntfy.sh/Doorbell-Pings", {
+        method: "POST",
+        headers: { "Content-Type": "text/plain", "Title": "Test Ping" },
+        body: "This is a test ping from the Control Room."
+      });
+      alert("Test ping sent!");
+    } catch (err) {
+      alert("Failed to send test ping.");
+      console.error(err);
+    }
+  }
+
+  refreshLogs();
+</script>
 </body>
 </html>
